<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_marginBottom="50dp">
    

    <TextView
        android:id="@+id/TapasList"
        style="@style/section_title_pestana2"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:text="@string/title_List_Album" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/border_list" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/border_list"
            android:paddingLeft="30dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:text="@string/lista_vacia"
            android:textColor="@android:color/black"
            android:textStyle="normal" >
        </TextView>
        
       
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical" >
        
   
      <es.miapp.mypetpics.internal.ExtendedEditText
            android:id="@+id/tituloA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="18dip"
            android:layout_marginRight="18dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/border_text"
            android:ems="10"
            android:hint="@string/hint_foto_desc"
            android:maxLength="140"
            android:typeface="sans" />
     <LinearLayout
        android:id="@+id/ButtonVote"
        android:layout_width="match_parent"
        android:layout_height="90dp"
       
        
        android:layout_marginBottom="5dp"
        android:baselineAligned="false"
        android:orientation="horizontal" >
     <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
     	<Button
            android:id="@+id/PublishA"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/publicar_style"
            android:gravity="center"
            android:text="@string/crearAlbum"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
     	</RelativeLayout>
      <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
      <Button
            android:id="@+id/BorrarA"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"          
            android:background="@drawable/borrar_style"
            android:gravity="center"
            android:text="@string/borrarAlbum"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
      </RelativeLayout>
       <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
       
        <Button
            android:id="@+id/EnviarA"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"          
            android:background="@drawable/publicar_style"
            android:gravity="center"
            android:text="@string/enviarAlbum"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
        </RelativeLayout>
     </LinearLayout>
      </LinearLayout>


</LinearLayout>